--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+amqp==5.3.1
 attrs==25.3.0
 Automat==25.4.16
+billiard==4.2.1
+celery==5.5.3
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 constantly==23.10.4
 cryptography==45.0.7
 cssselect==1.3.0
@@ -16,11 +23,13 @@ incremental==24.7.2
 itemadapter==0.12.2
 itemloaders==1.3.2
 jmespath==1.0.1
+kombu==5.5.4
 lxml==6.0.1
 packaging==25.0
 parsel==1.10.0
 playwright==1.55.0
 playwright-stealth==2.0.0
+prompt_toolkit==3.0.52
 Protego==0.5.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -29,6 +38,7 @@ PyDispatcher==2.0.7
 pyee==13.0.0
 pyOpenSSL==25.2.0
 pyotp==2.9.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 queuelib==1.8.0
 requests==2.32.5
@@ -36,9 +46,13 @@ requests-file==2.1.0
 Scrapy==2.13.3
 service-identity==24.2.0
 setuptools==80.9.0
+six==1.17.0
 tldextract==5.3.0
 Twisted==25.5.0
 typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
+vine==5.1.0
 w3lib==2.3.1
+wcwidth==0.2.13
 zope.interface==8.0
