--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ playwright==1.55.0
 playwright-stealth==2.0.0
 prompt_toolkit==3.0.52
 Protego==0.5.0
+psutil==7.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
@@ -41,6 +42,7 @@ pyotp==2.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 queuelib==1.8.0
+redis==6.4.0
 requests==2.32.5
 requests-file==2.1.0
 Scrapy==2.13.3
